--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/vue": "^1.0.6",
     "@pinia/nuxt": "latest",
     "class-transformer": "^0.5.1",
+    "date-fns-jalali": "^4.1.0-0",
     "dropzone": "^6.0.0-beta.2",
     "gsap": "^3.12.5",
     "laravel-vue-pagination": "^4.1.3",
@@ -27,6 +28,7 @@
     "six-dropzone": "^0.3.4",
     "vee-validate": "^4.13.2",
     "vue": "latest",
+    "vue3-persian-datetime-picker": "^1.2.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
