--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pinia/nuxt": "latest",
     "class-transformer": "^0.5.1",
     "date-fns-jalali": "^4.1.0-0",
+    "dayjs": "^1.11.13",
     "dropzone": "^6.0.0-beta.2",
     "gsap": "^3.12.5",
     "laravel-vue-pagination": "^4.1.3",
