--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@alireza-ab/vue3-persian-datepicker": "^1.0.5",
     "@heroicons/vue": "^1.0.6",
     "@pinia/nuxt": "latest",
+    "@vueform/multiselect": "^2.6.11",
     "class-transformer": "^0.5.1",
     "date-fns-jalali": "^4.1.0-0",
     "dayjs": "^1.11.13",
@@ -42,6 +43,7 @@
     "@vueuse/nuxt": "^11.0.3",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.10",
+    "mini-svg-data-uri": "^1.4.4",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.7.3",
