--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "six-dropzone": "^0.3.4",
     "vee-validate": "^4.13.2",
     "vue": "latest",
+    "vue-chartjs": "^5.3.2",
     "vue3-persian-datetime-picker": "^1.2.2",
     "yup": "^1.4.0"
   },
