--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "dayjs": "^1.11.13",
     "dropzone": "^6.0.0-beta.2",
     "gsap": "^3.12.5",
+    "laravel-echo": "^2.2.4",
     "laravel-vue-pagination": "^4.1.3",
     "nuxt": "^3.13.0",
     "object-to-formdata": "^4.5.1",
     "ohmyfetch": "^0.4.21",
+    "pusher-js": "^8.4.0",
     "reflect-metadata": "^0.1.14",
     "six-dropzone": "^0.3.4",
     "vee-validate": "^4.13.2",
