--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pusher-js": "^8.4.0",
     "reflect-metadata": "^0.1.14",
     "six-dropzone": "^0.3.4",
+    "socket.io-client": "^4.8.1",
     "vee-validate": "^4.13.2",
     "vue": "latest",
     "vue-chartjs": "^5.3.2",
@@ -44,6 +45,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/pusher-js": "^4.2.2",
+    "@types/socket.io-client": "^1.4.36",
     "@vueuse/core": "^11.0.3",
     "@vueuse/nuxt": "^11.0.3",
     "autoprefixer": "^10.4.20",
