--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nuxt": "^3.13.0",
     "object-to-formdata": "^4.5.1",
     "ohmyfetch": "^0.4.21",
+    "pdfjs-dist": "^3.11.174",
     "pusher-js": "^8.4.0",
     "reflect-metadata": "^0.1.14",
     "six-dropzone": "^0.3.4",
@@ -38,8 +39,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-optional-chaining": "^7.21.0",
     "@babel/plugin-proposal-optional-chaining-assign": "^7.25.7",
+    "@babel/plugin-transform-optional-chaining": "^7.21.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
