--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pusher-js": "^8.4.0",
     "reflect-metadata": "^0.1.14",
     "six-dropzone": "^0.3.4",
+    "undici": "^5.26.5",
     "vee-validate": "^4.15.1",
     "vue": "latest",
     "vue-chartjs": "^5.3.2",
